--- a/index.html
+++ b/index.html
@@ -2,36 +2,54 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Memory Duel Game</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Memory Duel - Made by Adam</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="title">Memory Duel - Made by Adam</div>
+  <div class="title">🧠 Memory Duel - Made by Adam</div>
+
   <div id="auth-screen">
     <h2>Login</h2>
-    <input id="login-username" placeholder="Username" />
-    <input id="login-password" placeholder="Password" type="password" />
+    <input id="login-username" placeholder="Username" autocomplete="off" />
+    <input id="login-password" placeholder="Password" type="password" autocomplete="off" />
     <button onclick="login()">Login</button>
     <p onclick="switchToRegister()">No account? Register</p>
   </div>
+
   <div id="register-screen" style="display:none;">
     <h2>Register</h2>
-    <input id="register-username" placeholder="Username" />
-    <input id="register-password" placeholder="Password" type="password" />
+    <input id="register-username" placeholder="Username" autocomplete="off" />
+    <input id="register-password" placeholder="Password" type="password" autocomplete="off" />
     <button onclick="register()">Register</button>
     <p onclick="switchToLogin()">Already have an account? Login</p>
   </div>
+
   <div id="game-screen" style="display:none;">
-    <h2>Welcome <span id="user-display"></span></h2>
-    <button onclick="startDuel()">Start Duel</button>
+    <h2>Welcome, <span id="user-display"></span></h2>
+
+    <div id="level-select">
+      <label for="level">Choose difficulty:</label>
+      <select id="level">
+        <option value="easy">Easy (4 pairs)</option>
+        <option value="medium">Medium (6 pairs)</option>
+        <option value="hard">Hard (8 pairs)</option>
+        <option value="extreme">Extreme (10 pairs)</option>
+      </select>
+    </div>
+
+    <button id="start-button" onclick="startDuel()">Start Duel</button>
+
     <div id="admin-panel" style="display:none;">
-      <h3>Admin Panel</h3>
-      <input id="delete-user" placeholder="Username to delete" />
+      <h3>Owner Panel</h3>
+      <input id="delete-user" placeholder="Username to delete" autocomplete="off" />
       <button onclick="deleteUser()">Delete User</button>
     </div>
+
     <div id="game-board"></div>
+    <div id="game-message"></div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
