--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>🧠 Memory Duel - Made by Adam</title>
+  <title>Memory Duel - Made by Adam</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -39,8 +39,17 @@
     </div>
 
     <button id="start-button" onclick="startDuel()">Start Duel</button>
-    <button id="settings-button" onclick="toggleSettings()">Settings ⚙️</button>
-    <button id="darkmode-toggle" onclick="toggleDarkMode()">🌙 Dark Mode</button>
+    <button id="dark-mode-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
+    <button id="settings-button" onclick="toggleSettings()">Settings</button>
+
+    <div id="settings-panel" style="display:none; margin-top: 10px; color: white;">
+      <h3>Settings</h3>
+      <label for="bgm-volume">Background Music Volume:</label>
+      <input type="range" id="bgm-volume" min="0" max="1" step="0.01" value="0.5" oninput="adjustBgmVolume(this.value)" />
+      <br />
+      <label for="sfx-volume">Game Sound Volume:</label>
+      <input type="range" id="sfx-volume" min="0" max="1" step="0.01" value="0.5" oninput="adjustSfxVolume(this.value)" />
+    </div>
 
     <div id="admin-panel" style="display:none;">
       <h3>Owner Panel</h3>
@@ -48,31 +57,9 @@
       <button onclick="deleteUser()">Delete User</button>
     </div>
 
-    <div id="scoreboard">
-      <div>Moves: <span id="move-count">0</span></div>
-      <div>Time: <span id="timer">0:00</span></div>
-    </div>
-
     <div id="game-board"></div>
     <div id="game-message"></div>
   </div>
-
-  <!-- Settings Modal -->
-  <div id="settings-modal" class="modal" style="display:none;">
-    <div class="modal-content">
-      <h3>Settings</h3>
-      <label for="music-volume">Background Music Volume</label>
-      <input type="range" id="music-volume" min="0" max="1" step="0.01" value="0.3" />
-      <label for="sfx-volume">Game Sounds Volume</label>
-      <input type="range" id="sfx-volume" min="0" max="1" step="0.01" value="0.5" />
-      <button onclick="toggleSettings()">Close</button>
-    </div>
-  </div>
-
-  <!-- Audio elements -->
-  <audio id="background-music" src="background-music.mp3" loop preload="auto"></audio>
-  <audio id="click-sound" src="click-sound.mp3" preload="auto"></audio>
-  <audio id="match-sound" src="match-sound.mp3" preload="auto"></audio>
 
   <script src="script.js"></script>
 </body>
