--- a/index.html
+++ b/index.html
@@ -1,32 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Memory Card Game - Adam's Game</title>
-<link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Memory Duel - Made by Adam</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="welcome-screen" class="animated">
-    <h1>Welcome to Adam's Memory Card Game!</h1>
-    <button id="start-game-btn">Start Game</button>
+  <div class="title">🧠 Memory Duel - Made by Adam</div>
+
+  <div id="auth-screen">
+    <h2>Login</h2>
+    <input id="login-username" placeholder="Username" autocomplete="off" />
+    <div class="password-container">
+      <input id="login-password" placeholder="Password" type="password" autocomplete="off" />
+      <span class="toggle-password" data-target="login-password" title="Show/Hide Password">👁️</span>
+    </div>
+    <label class="remember-me">
+      <input type="checkbox" id="remember-me" /> Remember me
+    </label>
+    <button onclick="login()">Login</button>
+    <p onclick="switchToRegister()">No account? Register</p>
   </div>
 
-  <div id="game-container" class="hidden">
-    <div class="settings-bar">
-      <button id="toggle-theme-btn">🌙 Dark Mode</button>
-      <button id="toggle-music-btn">🔈 Music: On</button>
-      <button id="leave-game-btn">Leave Game</button>
+  <div id="register-screen" style="display:none;">
+    <h2>Register</h2>
+    <input id="register-username" placeholder="Username" autocomplete="off" />
+    <div class="password-container">
+      <input id="register-password" placeholder="Password" type="password" autocomplete="off" />
+      <span class="toggle-password" data-target="register-password" title="Show/Hide Password">👁️</span>
+    </div>
+    <div class="password-container">
+      <input id="register-password-confirm" placeholder="Confirm Password" type="password" autocomplete="off" />
+      <span class="toggle-password" data-target="register-password-confirm" title="Show/Hide Password">👁️</span>
+    </div>
+    <button onclick="register()">Register</button>
+    <p onclick="switchToLogin()">Already have an account? Login</p>
+  </div>
+
+  <div id="game-screen" style="display:none;">
+    <h2>Welcome, <span id="user-display"></span></h2>
+
+    <div id="level-select">
+      <label for="level">Choose difficulty:</label>
+      <select id="level">
+        <option value="easy">Easy (4 pairs)</option>
+        <option value="medium">Medium (6 pairs)</option>
+        <option value="hard">Hard (8 pairs)</option>
+        <option value="extreme">Extreme (10 pairs)</option>
+      </select>
     </div>
 
-    <div id="status">
-      <p id="turn-info">Player 1's Turn</p>
-      <p id="score-info">Player 1: 0 | Player 2: 0</p>
+    <button id="start-button" onclick="startDuel()">Start Duel</button>
+
+    <div id="stats">
+      <span id="timer">Time: 0s</span> | <span id="moves">Moves: 0</span>
     </div>
 
+    <div id="game-message"></div>
     <div id="game-board"></div>
+
+    <button id="dark-mode-toggle">🌙 Dark Mode</button>
+
+    <div id="leaderboard">
+      <h3>Leaderboard</h3>
+      <ol id="leaderboard-list"></ol>
+    </div>
+
+    <div id="admin-panel" style="display:none;">
+      <h3>Owner Panel</h3>
+      <input id="delete-user" placeholder="Username to delete" autocomplete="off" />
+      <button onclick="deleteUser()">Delete User</button>
+    </div>
   </div>
 
-<script src="script.js"></script>
+  <canvas id="confetti-canvas" style="position:fixed; pointer-events:none; top:0; left:0; width:100%; height:100%; z-index:1000;"></canvas>
+
+  <script src="script.js"></script>
 </body>
 </html>
