--- a/index.html
+++ b/index.html
@@ -2,80 +2,49 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Memory Duel - Made by Adam</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Adam Memory Game</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="script.js" defer></script>
 </head>
 <body>
-  <div class="title">🧠 Memory Duel - Made by Adam</div>
+  <!-- WELCOME INTRO -->
+  <div id="intro">
+    <h1><span>Welcome</span> to <span>Adam</span>'s First <span>Game</span>!</h1>
+  </div>
 
+  <!-- AUTH SCREENS -->
   <div id="auth-screen">
     <h2>Login</h2>
-    <input id="login-username" placeholder="Username" autocomplete="off" />
+    <input type="text" id="login-username" placeholder="Username" />
     <div class="password-container">
-      <input id="login-password" placeholder="Password" type="password" autocomplete="off" />
-      <span class="toggle-password" data-target="login-password" title="Show/Hide Password">👁️</span>
+      <input type="password" id="login-password" placeholder="Password" />
+      <span class="toggle-password" data-target="login-password">👁️</span>
     </div>
-    <label class="remember-me">
-      <input type="checkbox" id="remember-me" /> Remember me
-    </label>
+    <label><input type="checkbox" id="remember-me" /> Remember me</label>
     <button onclick="login()">Login</button>
     <p onclick="switchToRegister()">No account? Register</p>
   </div>
 
   <div id="register-screen" style="display:none;">
     <h2>Register</h2>
-    <input id="register-username" placeholder="Username" autocomplete="off" />
+    <input type="text" id="register-username" placeholder="Username" />
     <div class="password-container">
-      <input id="register-password" placeholder="Password" type="password" autocomplete="off" />
-      <span class="toggle-password" data-target="register-password" title="Show/Hide Password">👁️</span>
-    </div>
-    <div class="password-container">
-      <input id="register-password-confirm" placeholder="Confirm Password" type="password" autocomplete="off" />
-      <span class="toggle-password" data-target="register-password-confirm" title="Show/Hide Password">👁️</span>
+      <input type="password" id="register-password" placeholder="Password" />
+      <span class="toggle-password" data-target="register-password">👁️</span>
     </div>
     <button onclick="register()">Register</button>
     <p onclick="switchToLogin()">Already have an account? Login</p>
   </div>
 
+  <!-- DARK MODE TOGGLE -->
+  <button id="dark-mode-toggle">🌙 Dark Mode</button>
+
+  <!-- GAME SCREEN PLACEHOLDER -->
   <div id="game-screen" style="display:none;">
-    <h2>Welcome, <span id="user-display"></span></h2>
-
-    <div id="level-select">
-      <label for="level">Choose difficulty:</label>
-      <select id="level">
-        <option value="easy">Easy (4 pairs)</option>
-        <option value="medium">Medium (6 pairs)</option>
-        <option value="hard">Hard (8 pairs)</option>
-        <option value="extreme">Extreme (10 pairs)</option>
-      </select>
-    </div>
-
-    <button id="start-button" onclick="startDuel()">Start Duel</button>
-
-    <div id="stats">
-      <span id="timer">Time: 0s</span> | <span id="moves">Moves: 0</span>
-    </div>
-
-    <div id="game-message"></div>
-    <div id="game-board"></div>
-
-    <button id="dark-mode-toggle">🌙 Dark Mode</button>
-
-    <div id="leaderboard">
-      <h3>Leaderboard</h3>
-      <ol id="leaderboard-list"></ol>
-    </div>
-
-    <div id="admin-panel" style="display:none;">
-      <h3>Owner Panel</h3>
-      <input id="delete-user" placeholder="Username to delete" autocomplete="off" />
-      <button onclick="deleteUser()">Delete User</button>
-    </div>
+    <h2>Welcome, <span id="player-name"></span>!</h2>
+    <button onclick="deleteUser()">Logout</button>
+    <button onclick="startDuel()">Start Duel</button>
   </div>
-
-  <canvas id="confetti-canvas" style="position:fixed; pointer-events:none; top:0; left:0; width:100%; height:100%; z-index:1000;"></canvas>
-
-  <script src="script.js"></script>
 </body>
 </html>
