--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1 id="intro-text">Welcome to Adam first game</h1>
   </div>
 
-  <div id="auth-screen">
+  <div id="auth-screen" style="display: none;">
     <h2>Login</h2>
     <input type="text" id="login-username" placeholder="Username"/>
     <div class="password-container">
@@ -43,8 +43,8 @@
   </div>
 
   <div id="game-screen" style="display: none;">
-    <h2 id="player-turn"></h2>
-    <div id="card-grid">[Cards Placeholder]</div>
+    <h2 id="player-turn">Player 1's Turn</h2>
+    <div id="card-grid">[Game Here]</div>
     <button onclick="endTurn()">End Turn</button>
   </div>
 
