--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Adam Memory Game</title>
-  <link rel="stylesheet" href="style.css"/>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="intro-screen">
@@ -13,21 +13,21 @@
 
   <div id="auth-screen" style="display: none;">
     <h2>Login</h2>
-    <input type="text" id="login-username" placeholder="Username"/>
+    <input type="text" id="login-username" placeholder="Username" />
     <div class="password-container">
-      <input type="password" id="login-password" placeholder="Password"/>
+      <input type="password" id="login-password" placeholder="Password" />
       <span id="login-eye" class="eye">👁️</span>
     </div>
-    <label><input type="checkbox" id="remember-login"/> Remember me</label>
+    <label><input type="checkbox" id="remember-login" /> Remember me</label>
     <button onclick="login()">Login</button>
     <p onclick="toggleRegister()">No account? Register</p>
   </div>
 
   <div id="register-screen" style="display: none;">
     <h2>Register</h2>
-    <input type="text" id="register-username" placeholder="Username"/>
+    <input type="text" id="register-username" placeholder="Username" />
     <div class="password-container">
-      <input type="password" id="register-password" placeholder="Password"/>
+      <input type="password" id="register-password" placeholder="Password" />
       <span id="register-eye" class="eye">👁️</span>
     </div>
     <button onclick="register()">Register</button>
@@ -39,7 +39,7 @@
     <button onclick="startPartyMode()">Start Party Mode</button>
     <button onclick="logout()">Logout</button>
     <button onclick="deleteAccount()">Delete Account</button>
-    <label><input type="checkbox" id="dark-toggle" onchange="toggleDarkMode()"> Dark Mode</label>
+    <label><input type="checkbox" id="dark-toggle" onchange="toggleDarkMode()" /> Dark Mode</label>
   </div>
 
   <div id="game-screen" style="display: none;">
