--- a/index.html
+++ b/index.html
@@ -1,58 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Adam Memory Game</title>
-  <link rel="stylesheet" href="style.css" />
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Adam Memory Game</title>
+<style>
+  body {
+    margin: 0; padding: 0;
+    font-family: Arial, sans-serif;
+  }
+  #intro-screen {
+    position: fixed;
+    top:0; left:0; right:0; bottom:0;
+    background: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 2.5em;
+    animation: fadeOut 2.5s ease forwards;
+  }
+  @keyframes fadeOut {
+    0% {opacity: 1;}
+    80% {opacity: 1;}
+    100% {opacity: 0; visibility: hidden;}
+  }
+  #auth-screen {
+    display: none;
+    padding: 20px;
+    text-align: center;
+  }
+</style>
 </head>
 <body>
-  <div id="intro-screen">
-    <h1 id="intro-text">Welcome to Adam first game</h1>
-  </div>
 
-  <div id="auth-screen" style="display: none;">
-    <h2>Login</h2>
-    <input type="text" id="login-username" placeholder="Username" />
-    <div class="password-container">
-      <input type="password" id="login-password" placeholder="Password" />
-      <span id="login-eye" class="eye">👁️</span>
-    </div>
-    <label><input type="checkbox" id="remember-login" /> Remember me</label>
-    <button onclick="login()">Login</button>
-    <p onclick="toggleRegister()">No account? Register</p>
-  </div>
+<div id="intro-screen">Welcome to Adam first game</div>
 
-  <div id="register-screen" style="display: none;">
-    <h2>Register</h2>
-    <input type="text" id="register-username" placeholder="Username" />
-    <div class="password-container">
-      <input type="password" id="register-password" placeholder="Password" />
-      <span id="register-eye" class="eye">👁️</span>
-    </div>
-    <button onclick="register()">Register</button>
-    <p onclick="toggleRegister()">Already have an account? Login</p>
-  </div>
+<div id="auth-screen">
+  <h2>Login</h2>
+  <input id="login-username" placeholder="Username" />
+  <input id="login-password" type="password" placeholder="Password" />
+  <button onclick="login()">Login</button>
+</div>
 
-  <div id="main-menu" style="display: none;">
-    <h1>Adam Memory Game</h1>
-    <button onclick="startPartyMode()">Start Party Mode</button>
-    <button onclick="logout()">Logout</button>
-    <button onclick="deleteAccount()">Delete Account</button>
-    <label><input type="checkbox" id="dark-toggle" onchange="toggleDarkMode()" /> Dark Mode</label>
-  </div>
+<script>
+  window.onload = function() {
+    setTimeout(function() {
+      document.getElementById('intro-screen').style.display = 'none';
+      document.getElementById('auth-screen').style.display = 'block';
+    }, 2500);
+  };
 
-  <div id="game-screen" style="display: none;">
-    <h2 id="player-turn">Player 1's Turn</h2>
-    <div id="card-grid">[Game Here]</div>
-    <button onclick="endTurn()">End Turn</button>
-  </div>
+  function login() {
+    alert("Login clicked! Username: " + document.getElementById('login-username').value);
+  }
+</script>
 
-  <div id="winner-screen" style="display: none;">
-    <h2 id="winner-text"></h2>
-    <button onclick="backToMenu()">Back to Menu</button>
-  </div>
-
-  <script src="script.js"></script>
 </body>
 </html>
